[package]
name = "gsbrs"
version = "0.5.0"
authors = ["insanitybit <insanitybit@gmail.com>"]
description = "Provides a client for the Google Safe Browsing Lookup API"
license = "MIT"
keywords = ["Google", "SafeBrowsing", "gsb"]

documentation = "https://insanitybit.github.io/gsblookup-rs/gsbrs/"
repository = "https://github.com/insanitybit/gsblookup-rs"
readme = "README.md"

[dependencies]
hyper = "0.6"
url = "0.2.*"

[dev-dependencies]
quickcheck = "0.2"

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
